# netwiss_fastapi

./: CORS_IMPLEMENTATION.md  test-cors.js
backend/: .env.example  ATTACHMENT_FEATURES.md  Procfile  README.md  example_usage.py  main.py  pyproject.toml  test_attachments.py  test_generate_sections.py  test_setup.py  test_url_api.py  test_with_url.py
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  cors.py  logging.py  prompts.py
backend/app/models/: __init__.py  proposal.py  template.py
backend/app/routers/: __init__.py  attachments.py  maintenance.py  proposal.py  template.py
backend/app/services/: __init__.py  file_service.py  llm_service.py  maintenance_service.py  proposal_service.py  proposal_service_new.py  summarization_service.py  template_service.py  web_scraping_service.py
backend/data/: digi4wirtschaft.json  digitalisierung_WA.json
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CORSTest.tsx  FileAttachment.tsx
frontend/src/lib/: api.ts  health.ts
